# s7-imgui

./: .cproject  .gitignore  .project  dev-log.org  dev.org  meson.build  mingw_x64.ini  readme.org
benchmark/: index.js
docs/: imgui.org  modules-libraries-etc.org  ns-doc.el  ns-doc.md  ns-doc.org  s7.org  scheme-cpp-ffi.org
examples/: audio_player.scm  ex-imgui-sfml.cpp  ex_audio_player.cpp  ex_curl.cpp  ex_imgui.cpp  ex_s7_temp.cpp  ex_sfml.cpp  ex_tcp_server.cpp  meson.build  nng-tcp-socket.c  s7-repl.cpp  sdl-net-tcp-socket.c  sdl_opengl.c
examples/scheme/: cload.scm  hi.scm  repl.scm
scheme-examples/: color_wheel.scm  color_wheel_different_ways.scm  example_inc.scm  maximized.scm  menu.scm  readme.org  shapes.scm  sigma-x-square.scm
src/: gui_repl.cpp  gui_repl_gflw.cpp  gui_repl_sdl.cpp  gui_repl_sfml.cpp  main.cpp  meson.build  repl.cpp
src/aod/: colors.cpp  colors.hpp  meson.build  nfd.cpp  nfd.hpp  path.hpp  s7.cpp  s7.hpp  sdl.cpp  sdl.hpp  tcp_server.hpp
src/aod/gl/: gl.cpp  gl.hpp
src/aod/img/: core.cpp  core.hpp
src/aod/imgui/: addons.cpp  addons.hpp  imconfig-SFML.h  imgui-SFML-graphics.h  imgui-SFML.h  knob.hpp  sfml-graphics.cpp  sfml.cpp
src/aod/midi/: midi.cpp  midi.hpp
src/aod/net/: net.cpp  net.hpp  net_impl_sdl.cpp  net_impl_sfml.cpp
src/aod/s7/: c_primitives.cpp  c_primitives.hpp  colors.cpp  colors.hpp  curl.cpp  curl.hpp  foreign_primitives.cpp  foreign_primitives.hpp  foreign_primitives_arr.cpp  foreign_primitives_arr.hpp  foreign_types.org  foreign_types_structs.org  gl.cpp  gl.hpp  img.cpp  img.hpp  imgui.cpp  imgui.hpp  imgui_addons.cpp  imgui_addons.hpp  imgui_sdl.cpp  imgui_sdl.hpp  json.cpp  json.hpp  midi.cpp  midi.hpp  nfd.cpp  nfd.hpp  os.cpp  os.hpp  regex.cpp  regex.hpp  repl.cpp  repl.hpp  sdl.cpp  sdl.hpp  string.cpp  string.hpp  wm.cpp  wm.hpp
src/aod/s7/imgui/: colors.cpp  colors.hpp  enums.cpp  enums.hpp  imgui.cpp
src/aod/sdl/: audio.cpp  audio.hpp
src/aod/wm/: wm.cpp  wm.hpp
src/lib/: meson.build
src/lib/stb/: stb.c
src/s7bi/: meson.build
src/s7bi/mongoose/: meson.build  s7bi_mongoose.cpp  s7bi_mongoose.hpp
src/scheme/: .gitignore  clj.scm  colors.scm  fib.scm  hello.scm  imgui.scm  imgui_macros.scm  imgui_scratch.scm  layout.scm  main.scm  main_2020-07-02.scm  ns-bar.scm  ns-bar2.scm  scratch.scm  secrets-example.scm  test.scm  todo_r7rs.scm  user.scm
src/scheme/aod/: autloads.scm  autoloads.scm  benchmark.scm  clj.scm  colors.scm  core.scm  fs.scm  geom.scm  imgui_macros.scm  io.scm  layout.scm  midi.scm  ns.scm  scales.scm  string.scm  sxs.scm  test.scm
src/scheme/aod/components/: input.scm  piano-wheel.scm  sxs-wheel.scm
src/scheme/aod/imgui/: helpers.scm  macros.scm
src/scheme/aod/midi/: core.scm  scales.scm
src/scheme/examples/: menu.scm  shapes.scm  text-editor.scm  text-input.scm  window-list.scm
src/scheme/freesound/: core.scm
src/scheme/s7/: .gitignore  debug.scm  r7rs.scm  s7.h
src/scheme/stochastic/: core.scm
src/scheme/test/: bar.scm  c-foreign-test.scm  c-os-test.scm  c_foreign_test.scm  foo.scm  ns-load-test.scm  ns-load-test2.scm  ns-load-test3.scm  ns_test.scm  partial-test.scm  partial_test.scm  regex_test.scm  string-test.scm  string_test.scm
subprojects/: SFML.wrap  curl-win64-mingw.wrap  curl.wrap  gflw.wrap  imgui.wrap  mongoose.wrap  nfd.wrap  nng.wrap  openssl-win64-mingw.wrap  s7.wrap  sdl2.wrap  sdl_net.wrap  socket-cpp.wrap
subprojects/packagefiles/curl-win64-mingw/: meson.build
subprojects/packagefiles/openssl-win64-mingw/: meson.build
test/: grindmerge.sh  meson.build  s7.supp  valgrind_gen.supp
test/aod/: colors_test.cpp  img_test.cpp  json_test.cpp  mongoose_test.cpp  valgrind_gen.cpp  wm_test.cpp
test/aod/s7/: c_primitives_test.cpp  curl_test.cpp  environments_test.cpp  ffi_test_raw.cpp  foreign_primitives_arr_test.cpp  foreign_primitives_test.cpp  memory_test.cpp  repl_test.cpp  valgrind_s7_test.cpp  wm_test.cpp
test/scheme/: gen-doc.scm  test-all.scm  test-benchmark.scm  test-core.scm
test/scheme/assets/: .gitignore
